[package]
name = "pngchat"
version = "1.0.0"
authors = ["Azathoth"]
edition = "2021"
description = "Hide messages in the PNG file"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crc = "3.0"
clap = { version = "3.1", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
