[package]
name = "pngchat"
version = "1.0.0"
authors = ["Azathoth"]
edition = "2021"
description = "Hide messages in the PNG file"
documentation = "https://docs.rs/pngchat"
readme = "README.md"
repository = "https://github.com/Azathoth1729/pngchat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crc = "3.0"
clap = { version = "3.1", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--document-private-items"]
